Changes to SeekersHD

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,7 +39,7 @@
 
     <!-- primary color palatte -->
     <color name="primary_red">#F44336</color>
-    <color name="primary_pink">#e91e63</color>
+    <color name="primary_pink">#2196F3</color>
     <color name="primary_purple">#9c27b0</color>
     <color name="primary_deep_purple">#673ab7</color>
     <color name="primary_indigo">#3f51b5</color>
@@ -59,7 +59,7 @@
 
     <!-- accent color palatte -->
     <color name="accent_red">#F44336</color>
-    <color name="accent_pink">#e91e63</color>
+    <color name="accent_pink">#03A9F4</color>
     <color name="accent_purple">#9c27b0</color>
     <color name="accent_deep_purple">#673ab7</color>
     <color name="accent_indigo">#3f51b5</color>
